sprint5/01-fault-injection/istio-fault-injection.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: service-b-fault-injection
spec:
    hosts:
    - service-b
    http:
    - fault:
        delay:
          fixedDelay: 2s
          percentage:
            value: 10
        abort:
          httpStatus: 503
          percentage:
            value: 5
      match:
      - uri:
          prefix: "/api"
      route:
      - destination:
          host: service-b
          subset: v1
        weight: 90
      - destination:
          host: service-b
          subset: v2
        weight: 10
    - route:
      - destination:
          host: service-b
          subset: v1
        weight: 90
      - destination:
          host: service-b
          subset: v2
        weight: 10
